--- a/includes/assets/css/dartsl_fecha.css
+++ b/includes/assets/css/dartsl_fecha.css
@@ -35,6 +35,7 @@ td.right_match div{
     text-align: center;
 }
 #partidos .match_avg ,
+#partidos .match_180 ,
 #partidos .match_co {
     font-size: 12px;
     padding: 0;
